fix #123 allow to specify extra annotations on repositories/methods